Add Client Window behaviour
- Spawns in the middle of the application
- Ever only has one instance open at once
- Functions from before were added to the Controller

--- a/ExternalServer/ES_FrontEnd/Windows/W_AddNewClient.xaml
+++ b/ExternalServer/ES_FrontEnd/Windows/W_AddNewClient.xaml
@@ -55,7 +55,7 @@
     <Grid Background="#1D1D1D" Height="357" Width="750" VerticalAlignment="Top">
         <Label Margin="303 24 302 311" Content="Add New Client" FontFamily="Montserrat" FontSize="18" Foreground="#FFFFFF" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="-5"/>
 
-        <Button Margin="710 24 24 317" Content="X" FontSize="20" Padding="0 -7 0 0" FontWeight="Bold" Foreground="#B7B7B7" Background="Transparent" BorderBrush="Transparent"/>
+        <Button x:Name="Btn_CloseClientWindow" Margin="710 24 24 317" Content="X" FontSize="20" Padding="0 -7 0 0" FontWeight="Bold" Foreground="#B7B7B7" Background="Transparent" BorderBrush="Transparent" Click="OnBtn_CloseClientWindow_Click"/>
 
         <Label Style="{StaticResource TextLabel}" Content="Client IP" Margin="24 79 620 261"/>
         <TextBox Style="{StaticResource InputField}" Text="127.0.0.0" Margin="24 102 388 209"/>
