Client can be added now!
- Client class has been set up
- Client will later be used to save up everything
- Client Constructor can be called now

-----

- Client Items are now added to the WarpPanel after hitting the save button
- Window Disapears after hitting Save
- Items scale properly in the Panel

- Controller constructor has been changed a little for easier calling of UserControlls
-

--- a/ExternalServer/ES_FrontEnd/UserControls/UC_Client.xaml
+++ b/ExternalServer/ES_FrontEnd/UserControls/UC_Client.xaml
@@ -11,7 +11,7 @@
     <Grid Width="1440" Height="945">
         <Grid.RowDefinitions>
             <RowDefinition Height="160"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="785"/>
         </Grid.RowDefinitions>
         
         
@@ -23,7 +23,7 @@
         
         
         <Grid Grid.Row="1">
-            <WrapPanel x:Name="Wrp_ClientList" Margin="316 157">
+            <WrapPanel x:Name="Wrp_ClientList" Margin="100 10 100 100">
                 
             </WrapPanel>    
         </Grid>
