--- a/ExternalServer/ES_FrontEnd/UserControls/UC_ClientListItem.xaml
+++ b/ExternalServer/ES_FrontEnd/UserControls/UC_ClientListItem.xaml
@@ -26,7 +26,7 @@
     </UserControl.Resources>
     
     
-    <Grid Height="297" Width="392" Background="#1D1D1D">
+    <Grid Height="297" Width="390" Background="#1D1D1D" Margin="5">
 
         <Label Content="Client ID" FontSize="18" FontFamily="Montserrat" Foreground="#B7B7B7" Padding="-2" Margin="24 24 289 251"/>
 
@@ -49,21 +49,21 @@
                 <Grid Grid.Row="0" Grid.Column="0" Background="#2D2D2D" Margin="5">
 
                     <Label Style="{StaticResource TextLabel}" Content="Client IP" Margin="12 12 90 46"/>
-                    <Label Style="{StaticResource NumberLabel}" Content="127.0.0.0" Margin="12 39 94 12"/>
+                    <Label x:Name="Lbl_ClientIP" Style="{StaticResource NumberLabel}" Content="127.0.0.0" Margin="12 39 94 12"/>
 
                 </Grid>
 
                 <Grid Grid.Row="0" Grid.Column="1" Background="#2D2D2D" Margin="5">
 
                     <Label Style="{StaticResource TextLabel}" Content="Client Command Port" Margin="12 12 5 46"/>
-                    <Label Style="{StaticResource NumberLabel}" Content="5555" Margin="12 39 94 12"/>
+                    <Label x:Name="Lbl_ClientCommandPort" Style="{StaticResource NumberLabel}" Content="5555" Margin="12 39 94 12"/>
 
                 </Grid>
 
                 <Grid Grid.Row="1" Grid.Column="0" Background="#2D2D2D" Margin="5">
 
                     <Label Style="{StaticResource TextLabel}" Content="Client Data Port" Margin="12 12 5 46"/>
-                    <Label Style="{StaticResource NumberLabel}" Content="5555" Margin="12 39 94 12"/>
+                    <Label x:Name="Lbl_ClientDataPort" Style="{StaticResource NumberLabel}" Content="5555" Margin="12 39 94 12"/>
 
                 </Grid>
 
