Client Type ComboBox approach

--- a/ExternalServer/ES_FrontEnd/Windows/W_AddNewClient.xaml
+++ b/ExternalServer/ES_FrontEnd/Windows/W_AddNewClient.xaml
@@ -6,7 +6,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ES_FrontEnd.Windows"
+        xmlns:local="clr-namespace:ES_FrontEnd.Helper"
         mc:Ignorable="d"
         Title="Add New Client" Height="357" Width="750">
 
@@ -50,8 +50,9 @@
             <Setter Property="Padding" Value="0 -7 0 0"/>
             <Setter Property="BorderBrush" Value="Transparent"/>
         </Style>
+
     </Window.Resources>
-    
+
     <Grid Background="#1D1D1D" Height="357" Width="750" VerticalAlignment="Top">
         <Label Margin="303 24 302 311" Content="Add New Client" FontFamily="Montserrat" FontSize="18" Foreground="#FFFFFF" HorizontalAlignment="Center" VerticalAlignment="Top" Padding="-5"/>
 
@@ -67,7 +68,28 @@
         <TextBox x:Name="TxtBx_ClientDataPort" Style="{StaticResource InputField}" Text="5555" Margin="24 195 388 116" TextChanged="OnTxtBx_ClientDataPort_TextChanged"/>
 
         <Label Style="{StaticResource TextLabel}" Content="ClientType" Margin="386 172 184 168"/>
-        <ComboBox Text="5555" Margin="386 195 26 116" BorderBrush="Transparent">
+
+
+        <Button x:Name="ToggleButton" Content="Select an option" Click="ToggleButton_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="385,200,0,0" Height="40" Width="340" />
+        <Popup x:Name="Popup" IsOpen="{Binding IsPopupOpen, RelativeSource={RelativeSource AncestorType=Window}}" Placement="Bottom" StaysOpen="False" Focusable="False" >
+            <StackPanel Background="White">
+                <Button Content="Option 1" Click="Button_Click"/>
+                <Button Content="Option 2" Click="Button_Click" />
+                <Button Content="Option 3" Click="Button_Click" />
+            </StackPanel>
+        </Popup>
+        
+        
+        <!--<TextBox x:Name="SelectedOptionTextBox" Text="{Binding SelectedOption, Mode=TwoWay}" IsReadOnly="True" IsHitTestVisible="False" Margin="730,200,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="15" Height="30" RenderTransformOrigin="0.667,-0.833" />-->
+
+
+
+        <!--#region ___Old ComboBox Approach___ -->
+        <!--<ComboBox x:Name="MyComboBox" Text="5555" Margin="386 195 26 116" BorderBrush="Transparent" IsEnabled="True">
+            
+            -->
+        <!--ComboBox Styling to get the custom look-->
+        <!--
             <ComboBox.Style>
                 <Style TargetType="ComboBox" BasedOn="{StaticResource InputType}">
                     <Setter Property="Background" Value="#2D2D2D" />
@@ -75,14 +97,23 @@
                         <Setter.Value>
                             <ControlTemplate TargetType="ComboBox">
                                 <Grid>
-                                    <ToggleButton x:Name="ToggleButton" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" Focusable="False">
+                                    <ToggleButton x:Name="ToggleButton" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" Focusable="False" Click="ToggleButton_Click">
                                         <ContentPresenter />
                                     </ToggleButton>
-                                    <Popup x:Name="Popup" IsOpen="{TemplateBinding IsDropDownOpen}" Placement="Bottom" AllowsTransparency="True" Focusable="False">
-                                        <Grid>
-                                            <Border x:Name="DropDownBorder" Background="Transparent">
+                                    <Popup x:Name="Popup" IsOpen="{Binding IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" Placement="Bottom" AllowsTransparency="True" Focusable="False" PlacementTarget="{Binding ElementName=ToggleButton}">
+                                        <Grid Background="#2D2D2D">
+                                            <Border x:Name="DropDownBorder" Background="Transparent" Width="338">
                                                 <ScrollViewer x:Name="ScrollViewer" VerticalScrollBarVisibility="Auto" Height="150" Width="Auto">
-                                                    <StackPanel IsItemsHost="True" />
+                                                    <StackPanel IsItemsHost="True">
+                                                        <StackPanel.Resources>
+                                                            <DataTemplate DataType="{x:Type local:ComboBoxItemData}">
+                                                                <StackPanel Orientation="Horizontal">
+                                                                    <Image Source="{Binding ImagePath}" Width="15" Height="25" Margin="0 0 5 0"/>
+                                                                    <TextBlock Text="{Binding Text}" />
+                                                                </StackPanel>
+                                                            </DataTemplate>
+                                                        </StackPanel.Resources>
+                                                    </StackPanel>
                                                 </ScrollViewer>
                                             </Border>
                                         </Grid>
@@ -93,10 +124,55 @@
                     </Setter>
                 </Style>
             </ComboBox.Style>
-            <ComboBoxItem Content="Item 1" />
-            <ComboBoxItem Content="Item 2" />
-            <ComboBoxItem Content="Item 3" />
-        </ComboBox>
+            
+            <ComboBox.ItemContainerStyle>
+                <Style TargetType="ComboBoxItem">
+                    <Setter Property="MinWidth" Value="338"/>
+                    <Setter Property="MinHeight" Value="46"/>
+                    <Setter Property="Padding" Value="5"/>
+                    <Setter Property="Foreground" Value="#848484"/>
+                    <Setter Property="FontFamily" Value="Poppins"/>
+                    <Setter Property="FontSize" Value="14"/>
+                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ComboBoxItem">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+
+                                    <Image Source="{Binding ImageSource}" Width="20" Height="20" Margin="5 1 0 5"/>
+                                    <ContentPresenter Grid.Column="1" VerticalAlignment="Center" Margin="5 0 0 0"/>
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ComboBox.ItemContainerStyle>
+
+            <ComboBox.ItemTemplate>
+            <DataTemplate>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="{Binding ImagePath}" Width="15" Height="25" Margin="0 0 5 0"/>
+                    <TextBlock Text="{Binding Text}" />
+                </StackPanel>
+            </DataTemplate>
+            </ComboBox.ItemTemplate>
+
+            <ComboBox.ItemsSource>
+                <x:Array Type="{x:Type local:ComboBoxItemData}">
+                    <local:ComboBoxItemData Text="Ship" ImagePath="pack://application:,,,/ES_FrontEnd;component/Resources/Icons/Icn_Ship.png"/>
+                    <local:ComboBoxItemData Text="Pedestrian" ImagePath="pack://application:,,,/ES_FrontEnd;component/Resources/Icons/Icn_Pedestrian.png"/>
+                    <local:ComboBoxItemData Text="VR" ImagePath="pack://application:,,,/ES_FrontEnd;component/Resources/Icons/Icn_VR.png"/>
+                </x:Array>
+            </ComboBox.ItemsSource>
+
+
+        </ComboBox>-->
+        <!--#endregion-->
+
 
 
         <StackPanel Orientation="Horizontal" Margin="113 289 113 24">
