--- a/ExternalServer/ES_FrontEnd/UserControls/UC_ClientListItem.xaml
+++ b/ExternalServer/ES_FrontEnd/UserControls/UC_ClientListItem.xaml
@@ -69,7 +69,8 @@
 
             </Grid>
         </WrapPanel>
-        
-        
+
+        <Label x:Name="Lbl_ClientType" Content="Client Type" Foreground="#B7B7B7" FontFamily="Montserrat" FontWeight="DemiBold" FontSize="14" Margin="51 254 247 26" Padding="-5"/>
+        <Image x:Name="Img_ClientType" Margin="30 252 350 24" Source="pack://application:,,,/ES_FrontEnd;component/Resources/Icons/Icn_Pedestrian.png"/>
     </Grid>
 </UserControl>
