--- a/ExternalServer/ES_FrontEnd/Windows/W_AddNewClient.xaml
+++ b/ExternalServer/ES_FrontEnd/Windows/W_AddNewClient.xaml
@@ -51,6 +51,18 @@
             <Setter Property="BorderBrush" Value="Transparent"/>
         </Style>
 
+        <Style x:Key="DropDownButtons" TargetType="Button">
+            <Setter Property="Height" Value="46"/>
+            <Setter Property="Width" Value="338"/>
+            <Setter Property="Background" Value="#2D2D2D"/>
+            <Setter Property="Foreground" Value="#FFFFFF"/>
+            <Setter Property="FontFamily" Value="Poppins"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="12"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+        </Style>
+
     </Window.Resources>
 
     <Grid Background="#1D1D1D" Height="357" Width="750" VerticalAlignment="Top">
@@ -70,19 +82,16 @@
         <Label Style="{StaticResource TextLabel}" Content="ClientType" Margin="386 172 184 168"/>
 
 
-        <Button x:Name="ToggleButton" Content="Select an option" Click="ToggleButton_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="385,200,0,0" Height="40" Width="340" />
-        <Popup x:Name="Popup" IsOpen="{Binding IsPopupOpen, RelativeSource={RelativeSource AncestorType=Window}}" Placement="Bottom" StaysOpen="False" Focusable="False" >
-            <StackPanel Background="White">
-                <Button Content="Option 1" Click="Button_Click"/>
-                <Button Content="Option 2" Click="Button_Click" />
-                <Button Content="Option 3" Click="Button_Click" />
+        <Button Style="{StaticResource DropDownButtons}" x:Name="ToggleButton" Content="Select an option" Click="ToggleButton_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="386 195 26 116" />
+        <Popup x:Name="Ppp_ClientType" IsOpen="{Binding IsPopupOpen, RelativeSource={RelativeSource AncestorType=Window}}" Placement="Bottom" PlacementTarget="{Binding ElementName=ToggleButton}" StaysOpen="False" Focusable="False" >
+            <StackPanel Background="White" >
+                <Button x:Name="Btn_ShipType"       Style="{StaticResource DropDownButtons}" Content="Ship"       Click="OnBtn_ShipType_Click"/>
+                <Button x:Name="Btn_PedestrianType" Style="{StaticResource DropDownButtons}" Content="Pedestiran" Click="OnBtn_PedestrianType_Click"/>
+                <Button x:Name="Btn_VRType"         Style="{StaticResource DropDownButtons}" Content="VR"         Click="OnBtn_VRType_Click"/>
             </StackPanel>
         </Popup>
         
         
-        <!--<TextBox x:Name="SelectedOptionTextBox" Text="{Binding SelectedOption, Mode=TwoWay}" IsReadOnly="True" IsHitTestVisible="False" Margin="730,200,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="15" Height="30" RenderTransformOrigin="0.667,-0.833" />-->
-
-
 
         <!--#region ___Old ComboBox Approach___ -->
         <!--<ComboBox x:Name="MyComboBox" Text="5555" Margin="386 195 26 116" BorderBrush="Transparent" IsEnabled="True">
