--- a/ExternalServer/ES_FrontEnd/UserControls/UC_Weather.xaml
+++ b/ExternalServer/ES_FrontEnd/UserControls/UC_Weather.xaml
@@ -15,6 +15,38 @@
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderBrush" Value="Transparent"/>
         </Style>
+
+        <Style x:Key="Buttons" TargetType="Button">
+            <Setter Property="Height" Value="44"/>
+            <Setter Property="Width" Value="250"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Padding" Value="0 -7 0 0"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="ButtonBorder"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="1"
+                            CornerRadius="25,25,25,25"
+                            Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FA9600" />
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" Value="#2D2D2D" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+        </Style>
+
     </UserControl.Resources>
 
     
@@ -73,12 +105,12 @@
         
         <!--#region ___ Cancel & Save Buttons___-->
         <StackPanel Orientation="Horizontal" Margin="450,480,450,400">
-            <Button Height="auto" Width="250" Background="Transparent" BorderBrush="Transparent">
-                <Image Height="auto" Source="pack://application:,,,/ES_FrontEnd;component/Resources/Images/Btn_Cancel.png"/>
+            <Button Style="{StaticResource Buttons}">
+                <Image Width="250" Height="50" Margin="0 -5 0 0" Source="pack://application:,,,/ES_FrontEnd;component/Resources/Images/Btn_Cancel.png"/>
             </Button>
 
-            <Button x:Name="Btn_SaveWeather" Height="auto" Width="250" Background="Transparent" BorderBrush="Transparent" Margin="25 0 0 0" Click="OnBtn_SaveWeather_Click">
-                <Image Height="auto" Source="pack://application:,,,/ES_FrontEnd;component/Resources/Images/Btn_Save.png"/>
+            <Button x:Name="Btn_SaveWeather" Style="{StaticResource Buttons}" Click="OnBtn_SaveWeather_Click">
+                <Image Width="250" Height="50" Margin="0 -5 0 0" Source="pack://application:,,,/ES_FrontEnd;component/Resources/Images/Btn_Save.png"/>
             </Button>
         </StackPanel>
         <!--#endregion-->
